src/components/showanswer.css
/* Since 'body' is a reserved name for an element in coding, outer is preferred as class name in order to prevent a possible complication. */
.outer {
  position: relative;
  width: 100%;
  height: 100%;
}

.wrapper {
  width: 100%;
  max-width: 700px;
  height: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.currentQuestionTrack {
  font-size: 24px;
  color: white;
  position: absolute;
  top: -22%;
}

.btn-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 15px;
  margin: 20px 0;
  width: 100%;
}

.currentQuestion {
  width: 100%;
  max-width: 500px;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 5px;
  font-size: 25px;
  color: #d98b88;
  margin-top: 2%;
}

button {
  border: 1px solid black;
  background-color: #f5f3f3;
  border-radius: 5px;
  padding: 20px 70px;
  margin: 1%;
  text-align: justify;
  cursor: pointer;
}

.next-btn {
  display: inline-block;
  background-color: #8caf89;
  border: none;
  border-radius: 5px;
  color: white;
  padding: 8px 30px;
  text-align: center;
  text-decoration: none;
  font-size: 20px;
  font-weight: bold;
  margin: 0px 4px;
  cursor: pointer;
  margin-bottom: 20px;
  font-family: "Londrina Solid", sans-serif;
  font-weight: 400;
  letter-spacing: 2px;
  transition: box-shadow 0.2s ease-in-out;
}

.next-btn:hover {
  background-color: #69d38a;
}

.correct {
  background-color: #83b085;
}
.wrong {
  background-color: #eb9999;
}

